cmake_minimum_required(VERSION 3.15)
project(tarea_3)

set(CMAKE_CXX_STANDARD 20)

add_executable(tarea_3 src/main.cpp src/Orden.cpp src/Orden.h src/producto.cpp src/producto.h src/Tipos.h src/Menu.cpp src/Menu.h src/Estado.cpp src/Estado.h src/User.cpp src/User.h src/vehiculo.cpp src/vehiculo.h src/ejercicios.cpp src/ejercicios.h src/lifo.cpp src/lifo.h src/lifo_g.h)